--- a/package.json
+++ b/package.json
@@ -1,24 +1,23 @@
 {
   "name": "ngx-editor",
-  "version": "4.1.0",
+  "version": "3.3.0-rc.11",
   "description": "WYSIWYG Editor for Angular Applications",
   "license": "MIT",
   "scripts": {
     "build": "ng build --prod",
     "build:package": "sh ./scripts/build.sh",
-    "docs": "compodoc && npm run publish:docs",
+    "cz": "git-cz",
+    "docs": "./node_modules/.bin/compodoc --tsconfig=\"src/tsconfig.app.json\" -n \"NgxEditor\" --includes \"./extras\" --disableCoverage --disablePrivate --disableInternal --disableLifeCycleHooks --disableProtected --hideGenerator --customFavicon=\"src/favicon.ico\" --output=\"docs/\" --includesName=\"Wiki\"",
     "e2e": "ng e2e",
     "lint": "ng lint",
-    "lint:scripts": "eslint ./scripts",
     "ng": "ng",
     "postbuild": "npm run build:package",
     "prebuild": "npm run lint",
-    "prepublishOnly": "node ./scripts/prepublish.js",
+    "precommit": "npm run lint && npm run test:single-run",
     "prerelease": "npm run build",
-    "publish:docs": "node ./scripts/publishdocs.js",
     "release": "sh ./scripts/release.sh",
     "start": "ng serve --aot -o --port 5000 --host 0.0.0.0",
-    "serve:docs": "compodoc --serve --open --output=\"docs/\"",
+    "serve:docs": "./node_modules/.bin/compodoc --serve --open --output=\"docs/\"",
     "test": "ng test",
     "test:single-run": "ng test --watch false"
   },
@@ -32,63 +31,66 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/sibiraj-s/ngx-editor.git"
+    "url": "git+https://github.com/Sibiraj-S/ngx-editor.git"
   },
   "bugs": {
-    "url": "https://github.com/sibiraj-s/ngx-editor/issues"
+    "url": "https://github.com/Sibiraj-S/ngx-editor/issues"
   },
-  "homepage": "https://github.com/sibiraj-s/ngx-editor",
+  "homepage": "https://github.com/Sibiraj-S/ngx-editor",
   "peerDependencies": {
-    "@angular/common": "^6.1.0",
-    "@angular/core": "^6.1.0",
-    "@angular/forms": "^6.1.0",
+    "@angular/common": "^5.2.0",
+    "@angular/core": "^5.2.0",
+    "@angular/forms": "^5.2.0",
+    "codemirror": "^5.35.0",
     "font-awesome": "^4.7.0",
-    "ngx-bootstrap": "^3.0.1",
-    "rxjs": "~6.2.0"
+    "ngx-bootstrap": "^2.0.2",
+    "rxjs": "^5.5.6"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.8.0",
-    "@angular/animations": "^6.1.0",
-    "@angular/cli": "~6.2.4",
-    "@angular/common": "^6.1.0",
-    "@angular/compiler": "^6.1.0",
-    "@angular/compiler-cli": "^6.1.0",
-    "@angular/core": "^6.1.0",
-    "@angular/forms": "^6.1.0",
-    "@angular/http": "^6.1.0",
-    "@angular/language-service": "^6.1.0",
-    "@angular/platform-browser": "^6.1.0",
-    "@angular/platform-browser-dynamic": "^6.1.0",
-    "@angular/router": "^6.1.0",
-    "@compodoc/compodoc": "^1.1.5",
-    "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "bootstrap": "^4.1.3",
-    "chalk": "^2.4.1",
-    "codelyzer": "~4.3.0",
-    "core-js": "^2.5.4",
-    "eslint": "^5.6.1",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.14.0",
+    "@angular/animations": "^5.2.0",
+    "@angular/cli": "1.7.2",
+    "@angular/common": "^5.2.0",
+    "@angular/compiler": "^5.2.0",
+    "@angular/compiler-cli": "^5.2.0",
+    "@angular/core": "^5.2.0",
+    "@angular/forms": "^5.2.0",
+    "@angular/http": "^5.2.0",
+    "@angular/language-service": "^5.2.0",
+    "@angular/platform-browser": "^5.2.0",
+    "@angular/platform-browser-dynamic": "^5.2.0",
+    "@angular/router": "^5.2.0",
+    "@compodoc/compodoc": "^1.0.8",
+    "@types/jasmine": "~2.8.3",
+    "@types/jasminewd2": "~2.0.2",
+    "@types/node": "~6.0.60",
+    "bootstrap": "^4.0.0",
+    "codelyzer": "^4.0.1",
+    "codemirror": "^5.35.0",
+    "commitizen": "^2.9.6",
+    "core-js": "^2.4.1",
+    "cz-conventional-changelog": "^2.1.0",
     "font-awesome": "^4.7.0",
-    "gh-pages": "^2.0.1",
-    "husky": "^1.1.2",
-    "inquirer": "^6.2.0",
-    "jasmine-core": "~2.99.1",
+    "husky": "^0.14.3",
+    "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.0.0",
+    "karma": "~2.0.0",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~1.1.2",
+    "karma-coverage-istanbul-reporter": "^1.2.1",
+    "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "ng-packagr": "^4.3.0",
-    "ngx-bootstrap": "^3.0.1",
-    "protractor": "~5.4.0",
-    "rxjs": "~6.2.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
-    "typescript": "~2.9.2",
-    "zone.js": "~0.8.26"
+    "ng-packagr": "^2.2.0",
+    "ngx-bootstrap": "^2.0.2",
+    "protractor": "~5.1.2",
+    "rxjs": "^5.5.6",
+    "ts-node": "~4.1.0",
+    "tsickle": "^0.27.2",
+    "tslint": "~5.9.1",
+    "typescript": "~2.5.3",
+    "zone.js": "^0.8.19"
+  },
+  "config": {
+    "commitizen": {
+      "path": "node_modules/cz-conventional-changelog"
+    }
   }
 }
